Assignment 2/src/main/d96/parser/.antlr/D96Parser.py
# Generated from c:\Users\toanv\Desktop\initial_2\initial\src\main\d96\parser\D96.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'", "':'", "';'", "','", "'Break'", "'Continue'", 
                     "'If'", "'Elseif'", "'Else'", "'Foreach'", "'True'", 
                     "'False'", "'Array'", "'In'", "'Int'", "'Float'", "'Boolean'", 
                     "'String'", "'Return'", "'Null'", "'Class'", "'Self'", 
                     "'Val'", "'Var'", "'Constructor'", "'Destructor'", 
                     "'New'", "'By'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'!'", "'&&'", "'||'", "'=='", "'='", "'!='", "'>'", 
                     "'<'", "'>='", "'<='", "'==.'", "'+.'", "'..'", "'.'", 
                     "'::'" ]

    symbolicNames = [ "<INVALID>", "NZINTLIT", "INTLIT", "FLOATLIT", "BOOLIT", 
                      "STRINGLIT", "LB", "RB", "LP", "RP", "LSB", "RSB", 
                      "COLON", "SEMI", "COMMA", "BREAK", "CONTINUE", "IF", 
                      "ELSEIF", "ELSE", "FOREACH", "TRUE", "FALSE", "ARRAY", 
                      "IN", "INT", "FLOAT", "BOOLEAN", "STRING", "RETURN", 
                      "NULL", "CLASS", "SELF", "VAL", "VAR", "CONSTRUCTOR", 
                      "DESTRUCTOR", "NEW", "BY", "ADDOP", "SUBOP", "MULOP", 
                      "DIVOP", "MODOP", "NOTOP", "ANDOP", "OROP", "EQLOP", 
                      "ASSOP", "IEQOP", "GRTOP", "LSTOP", "GTEOP", "LTEOP", 
                      "STRCMP", "CONCAT", "DOTDOT", "DOTOP", "SCOOP", "IDENTIFIERS", 
                      "STATIC_MEM", "COMMENT", "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_code_declares = 1
    RULE_class_body = 2
    RULE_class_attribute_declare = 3
    RULE_special_init_method_declare = 4
    RULE_method_declare = 5
    RULE_attr_decl = 6
    RULE_full_ids = 7
    RULE_id_list = 8
    RULE_mid2 = 9
    RULE_mid1 = 10
    RULE_param_list = 11
    RULE_param = 12
    RULE_expression = 13
    RULE_expression1 = 14
    RULE_expression2 = 15
    RULE_expression3 = 16
    RULE_expression4 = 17
    RULE_expression5 = 18
    RULE_expression6 = 19
    RULE_expression7 = 20
    RULE_expression8 = 21
    RULE_expression9 = 22
    RULE_expression10 = 23
    RULE_operand = 24
    RULE_expression_list = 25
    RULE_var_declare_stmt = 26
    RULE_var_attr_stmt = 27
    RULE_val_attr_stmt = 28
    RULE_attr_stmt = 29
    RULE_attr_stmt_no_init = 30
    RULE_id_list_without_static = 31
    RULE_attr_stmt_full = 32
    RULE_block_stmt = 33
    RULE_stmt3 = 34
    RULE_assign_stmt = 35
    RULE_lhs = 36
    RULE_if_stmt = 37
    RULE_for_stmt = 38
    RULE_break_stmt = 39
    RULE_continue_stmt = 40
    RULE_return_stmt = 41
    RULE_invoca_stmt = 42
    RULE_all_type = 43
    RULE_prim_type = 44
    RULE_arr_type = 45
    RULE_class_type = 46
    RULE_int_type = 47
    RULE_float_type = 48
    RULE_string_type = 49
    RULE_boolean_type = 50
    RULE_primitive_type = 51
    RULE_array_member_type = 52
    RULE_indexed_array = 53
    RULE_array_member = 54
    RULE_multi_array = 55
    RULE_multi_in_multi = 56
    RULE_index_in_multi = 57
    RULE_empty_multi = 58
    RULE_multi_arrays = 59
    RULE_multi_array_mem = 60
    RULE_literals = 61

    ruleNames =  [ "program", "code_declares", "class_body", "class_attribute_declare", 
                   "special_init_method_declare", "method_declare", "attr_decl", 
                   "full_ids", "id_list", "mid2", "mid1", "param_list", 
                   "param", "expression", "expression1", "expression2", 
                   "expression3", "expression4", "expression5", "expression6", 
                   "expression7", "expression8", "expression9", "expression10", 
                   "operand", "expression_list", "var_declare_stmt", "var_attr_stmt", 
                   "val_attr_stmt", "attr_stmt", "attr_stmt_no_init", "id_list_without_static", 
                   "attr_stmt_full", "block_stmt", "stmt3", "assign_stmt", 
                   "lhs", "if_stmt", "for_stmt", "break_stmt", "continue_stmt", 
                   "return_stmt", "invoca_stmt", "all_type", "prim_type", 
                   "arr_type", "class_type", "int_type", "float_type", "string_type", 
                   "boolean_type", "primitive_type", "array_member_type", 
                   "indexed_array", "array_member", "multi_array", "multi_in_multi", 
                   "index_in_multi", "empty_multi", "multi_arrays", "multi_array_mem", 
                   "literals" ]

    EOF = Token.EOF
    NZINTLIT=1
    INTLIT=2
    FLOATLIT=3
    BOOLIT=4
    STRINGLIT=5
    LB=6
    RB=7
    LP=8
    RP=9
    LSB=10
    RSB=11
    COLON=12
    SEMI=13
    COMMA=14
    BREAK=15
    CONTINUE=16
    IF=17
    ELSEIF=18
    ELSE=19
    FOREACH=20
    TRUE=21
    FALSE=22
    ARRAY=23
    IN=24
    INT=25
    FLOAT=26
    BOOLEAN=27
    STRING=28
    RETURN=29
    NULL=30
    CLASS=31
    SELF=32
    VAL=33
    VAR=34
    CONSTRUCTOR=35
    DESTRUCTOR=36
    NEW=37
    BY=38
    ADDOP=39
    SUBOP=40
    MULOP=41
    DIVOP=42
    MODOP=43
    NOTOP=44
    ANDOP=45
    OROP=46
    EQLOP=47
    ASSOP=48
    IEQOP=49
    GRTOP=50
    LSTOP=51
    GTEOP=52
    LTEOP=53
    STRCMP=54
    CONCAT=55
    DOTDOT=56
    DOTOP=57
    SCOOP=58
    IDENTIFIERS=59
    STATIC_MEM=60
    COMMENT=61
    WS=62
    UNCLOSE_STRING=63
    ILLEGAL_ESCAPE=64
    ERROR_CHAR=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def code_declares(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Code_declaresContext)
            else:
                return self.getTypedRuleContext(D96Parser.Code_declaresContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 124
                self.code_declares()
                self.state = 127 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASS):
                    break

            self.state = 129
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Code_declaresContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def IDENTIFIERS(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.IDENTIFIERS)
            else:
                return self.getToken(D96Parser.IDENTIFIERS, i)

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def class_body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Class_bodyContext)
            else:
                return self.getTypedRuleContext(D96Parser.Class_bodyContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_code_declares




    def code_declares(self):

        localctx = D96Parser.Code_declaresContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_code_declares)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(D96Parser.CLASS)
            self.state = 132
            self.match(D96Parser.IDENTIFIERS)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.COLON:
                self.state = 133
                self.match(D96Parser.COLON)
                self.state = 134
                self.match(D96Parser.IDENTIFIERS)


            self.state = 137
            self.match(D96Parser.LP)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.VAL) | (1 << D96Parser.VAR) | (1 << D96Parser.CONSTRUCTOR) | (1 << D96Parser.DESTRUCTOR) | (1 << D96Parser.IDENTIFIERS) | (1 << D96Parser.STATIC_MEM))) != 0):
                self.state = 138
                self.class_body()
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 144
            self.match(D96Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def method_declare(self):
            return self.getTypedRuleContext(D96Parser.Method_declareContext,0)


        def class_attribute_declare(self):
            return self.getTypedRuleContext(D96Parser.Class_attribute_declareContext,0)


        def special_init_method_declare(self):
            return self.getTypedRuleContext(D96Parser.Special_init_method_declareContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_class_body




    def class_body(self):

        localctx = D96Parser.Class_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_body)
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.IDENTIFIERS, D96Parser.STATIC_MEM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.method_declare()
                pass
            elif token in [D96Parser.VAL, D96Parser.VAR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.class_attribute_declare()
                pass
            elif token in [D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 148
                self.special_init_method_declare()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_attribute_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attr_decl(self):
            return self.getTypedRuleContext(D96Parser.Attr_declContext,0)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_class_attribute_declare




    def class_attribute_declare(self):

        localctx = D96Parser.Class_attribute_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_class_attribute_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            _la = self._input.LA(1)
            if not(_la==D96Parser.VAL or _la==D96Parser.VAR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 152
            self.attr_decl()
            self.state = 153
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Special_init_method_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def block_stmt(self):
            return self.getTypedRuleContext(D96Parser.Block_stmtContext,0)


        def CONSTRUCTOR(self):
            return self.getToken(D96Parser.CONSTRUCTOR, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def DESTRUCTOR(self):
            return self.getToken(D96Parser.DESTRUCTOR, 0)

        def param_list(self):
            return self.getTypedRuleContext(D96Parser.Param_listContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_special_init_method_declare




    def special_init_method_declare(self):

        localctx = D96Parser.Special_init_method_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_special_init_method_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.CONSTRUCTOR]:
                self.state = 155
                self.match(D96Parser.CONSTRUCTOR)
                self.state = 156
                self.match(D96Parser.LB)
                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==D96Parser.IDENTIFIERS:
                    self.state = 157
                    self.param_list()


                pass
            elif token in [D96Parser.DESTRUCTOR]:
                self.state = 160
                self.match(D96Parser.DESTRUCTOR)
                self.state = 161
                self.match(D96Parser.LB)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 164
            self.match(D96Parser.RB)
            self.state = 165
            self.block_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STATIC_MEM(self):
            return self.getToken(D96Parser.STATIC_MEM, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def block_stmt(self):
            return self.getTypedRuleContext(D96Parser.Block_stmtContext,0)


        def param_list(self):
            return self.getTypedRuleContext(D96Parser.Param_listContext,0)


        def IDENTIFIERS(self):
            return self.getToken(D96Parser.IDENTIFIERS, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_method_declare




    def method_declare(self):

        localctx = D96Parser.Method_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_method_declare)
        self._la = 0 # Token type
        try:
            self.state = 181
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.STATIC_MEM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.match(D96Parser.STATIC_MEM)
                self.state = 168
                self.match(D96Parser.LB)
                self.state = 170
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==D96Parser.IDENTIFIERS:
                    self.state = 169
                    self.param_list()


                self.state = 172
                self.match(D96Parser.RB)
                self.state = 173
                self.block_stmt()
                pass
            elif token in [D96Parser.IDENTIFIERS]:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.match(D96Parser.IDENTIFIERS)
                self.state = 175
                self.match(D96Parser.LB)
                self.state = 177
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==D96Parser.IDENTIFIERS:
                    self.state = 176
                    self.param_list()


                self.state = 179
                self.match(D96Parser.RB)
                self.state = 180
                self.block_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list(self):
            return self.getTypedRuleContext(D96Parser.Id_listContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def all_type(self):
            return self.getTypedRuleContext(D96Parser.All_typeContext,0)


        def mid2(self):
            return self.getTypedRuleContext(D96Parser.Mid2Context,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attr_decl




    def attr_decl(self):

        localctx = D96Parser.Attr_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attr_decl)
        try:
            self.state = 188
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 183
                self.id_list()
                self.state = 184
                self.match(D96Parser.COLON)
                self.state = 185
                self.all_type()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 187
                self.mid2()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Full_idsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIERS(self):
            return self.getToken(D96Parser.IDENTIFIERS, 0)

        def STATIC_MEM(self):
            return self.getToken(D96Parser.STATIC_MEM, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_full_ids




    def full_ids(self):

        localctx = D96Parser.Full_idsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_full_ids)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 190
            _la = self._input.LA(1)
            if not(_la==D96Parser.IDENTIFIERS or _la==D96Parser.STATIC_MEM):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def full_ids(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Full_idsContext)
            else:
                return self.getTypedRuleContext(D96Parser.Full_idsContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def getRuleIndex(self):
            return D96Parser.RULE_id_list




    def id_list(self):

        localctx = D96Parser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_id_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 192
            self.full_ids()
            self.state = 197
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.COMMA:
                self.state = 193
                self.match(D96Parser.COMMA)
                self.state = 194
                self.full_ids()
                self.state = 199
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mid2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STATIC_MEM(self):
            return self.getToken(D96Parser.STATIC_MEM, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def mid2(self):
            return self.getTypedRuleContext(D96Parser.Mid2Context,0)


        def expression(self):
            return self.getTypedRuleContext(D96Parser.ExpressionContext,0)


        def IDENTIFIERS(self):
            return self.getToken(D96Parser.IDENTIFIERS, 0)

        def mid1(self):
            return self.getTypedRuleContext(D96Parser.Mid1Context,0)


        def getRuleIndex(self):
            return D96Parser.RULE_mid2




    def mid2(self):

        localctx = D96Parser.Mid2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_mid2)
        try:
            self.state = 220
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 200
                self.match(D96Parser.STATIC_MEM)
                self.state = 201
                self.match(D96Parser.COMMA)
                self.state = 202
                self.mid2()
                self.state = 203
                self.match(D96Parser.COMMA)
                self.state = 204
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 206
                self.match(D96Parser.IDENTIFIERS)
                self.state = 207
                self.match(D96Parser.COMMA)
                self.state = 208
                self.mid2()
                self.state = 209
                self.match(D96Parser.COMMA)
                self.state = 210
                self.expression()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 212
                self.match(D96Parser.STATIC_MEM)
                self.state = 213
                self.mid1()
                self.state = 214
                self.expression()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 216
                self.match(D96Parser.IDENTIFIERS)
                self.state = 217
                self.mid1()
                self.state = 218
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mid1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def all_type(self):
            return self.getTypedRuleContext(D96Parser.All_typeContext,0)


        def ASSOP(self):
            return self.getToken(D96Parser.ASSOP, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_mid1




    def mid1(self):
